Correction aside, article padding et alignement

--- a/_layout/_article.scss
+++ b/_layout/_article.scss
@@ -67,27 +67,32 @@
         }
 
         & .article-flex-desktop {
+            width: 80%;
+            margin: 0 auto;
 
             @include breakpoint(1366) {
                 width: 65%;
-                margin-top: 3rem;
+                margin: 3rem 0 0 0;
+                padding-left: 4em;
             }
         
             & .zone-titre {
-                width: 20em;
+                width: 80%;
                 margin: 0 auto;
                 text-align: center;
 
                 @include breakpoint(768){
                     width: 80%;
+                    margin: 0;
                     text-align: left;
                 }
                 @include breakpoint(1366){
-                    width: 80%;
+                    width: 100%;
+                    margin: 0;
                 }
                 
                 & .titre-article {
-                    font-size: 2rem;
+                    font-size: 2.5rem;
                     font-weight: 100;
 
                     @include breakpoint(768){
@@ -125,15 +130,18 @@
                     max-width: 465px;
                     font-size: 0.9rem;
                 }
+                @include breakpoint(1366){
+                    font-size: 1rem;
+                }
             }
         
             & .paragraph {
-                width: 80vw;
-                margin: 0 auto;
+                // width: 80vw;
+                // margin: 0 auto;
                 padding: 1.5em 0;
     
                 @include breakpoint(768){
-                    width: 80%;
+                    width: 100%;
                 }
         
                 & .soustitre {
@@ -195,6 +203,7 @@
             }
             @include breakpoint(1366) {
                 width: 25%;
+                margin-left: 0;
             }
 
             & .wrap-auteur {
@@ -221,7 +230,7 @@
     
                     @include breakpoint(1366){
                         display: block;
-                        width: 80%;
+                        width: 100%;
                         padding: 50px 10px 0 10px;
                         border: 5px solid var(--orange-trans);
                     }
