--- a/style.css
+++ b/style.css
@@ -341,15 +341,21 @@ header .logo-desktop {
   }
 }
 
+.contenu-page .contenu-article .article-flex-desktop {
+  width: 80%;
+  margin: 0 auto;
+}
+
 @media only screen and (min-width: 1366px) {
   .contenu-page .contenu-article .article-flex-desktop {
     width: 65%;
-    margin-top: 3rem;
+    margin: 3rem 0 0 0;
+    padding-left: 4em;
   }
 }
 
 .contenu-page .contenu-article .article-flex-desktop .zone-titre {
-  width: 20em;
+  width: 80%;
   margin: 0 auto;
   text-align: center;
 }
@@ -357,18 +363,20 @@ header .logo-desktop {
 @media only screen and (min-width: 768px) {
   .contenu-page .contenu-article .article-flex-desktop .zone-titre {
     width: 80%;
+    margin: 0;
     text-align: left;
   }
 }
 
 @media only screen and (min-width: 1366px) {
   .contenu-page .contenu-article .article-flex-desktop .zone-titre {
-    width: 80%;
+    width: 100%;
+    margin: 0;
   }
 }
 
 .contenu-page .contenu-article .article-flex-desktop .zone-titre .titre-article {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 100;
 }
 
@@ -416,15 +424,19 @@ header .logo-desktop {
   }
 }
 
+@media only screen and (min-width: 1366px) {
+  .contenu-page .contenu-article .article-flex-desktop .citation {
+    font-size: 1rem;
+  }
+}
+
 .contenu-page .contenu-article .article-flex-desktop .paragraph {
-  width: 80vw;
-  margin: 0 auto;
   padding: 1.5em 0;
 }
 
 @media only screen and (min-width: 768px) {
   .contenu-page .contenu-article .article-flex-desktop .paragraph {
-    width: 80%;
+    width: 100%;
   }
 }
 
@@ -511,6 +523,7 @@ header .logo-desktop {
 @media only screen and (min-width: 1366px) {
   .contenu-page .contenu-article aside {
     width: 25%;
+    margin-left: 0;
   }
 }
 
@@ -558,7 +571,7 @@ header .logo-desktop {
 @media only screen and (min-width: 1366px) {
   .contenu-page .contenu-article aside .wrap-auteur .img-auteur {
     display: block;
-    width: 80%;
+    width: 100%;
     padding: 50px 10px 0 10px;
     border: 5px solid var(--orange-trans);
   }
@@ -631,7 +644,6 @@ header .logo-desktop {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    margin-left: 3rem;
   }
 }
 
@@ -678,6 +690,7 @@ header .logo-desktop {
 
 @media only screen and (min-width: 1366px) {
   .recette-wrapper .recette-list {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -876,12 +889,12 @@ header .logo-desktop {
 @media only screen and (min-width: 1366px) {
   .pub-desktop {
     display: block;
+    width: 100%;
   }
 }
 
 .pub-desktop .pub {
   margin-bottom: 4rem;
-  width: 14em;
   max-width: 350px;
   height: 720px;
   font-size: 1.3rem;
